<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/boy"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:textOff="@string/gender_male"
        android:textOn="@string/gender_female"
        android:layout_marginTop="8dp"
        android:id="@+id/gender_toggle"
        android:onClick="genderToggle"/>

    <EditText
        android:layout_below="@id/gender_toggle"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_account_box_black_20dp"
        android:drawableStart="@drawable/ic_account_box_black_20dp"
        android:drawablePadding="10dp"
        android:maxLength="10"
        android:inputType="text"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email_hint"
        android:drawableLeft="@drawable/ic_email_black_22dp"
        android:drawableStart="@drawable/ic_email_black_22dp"
        android:drawablePadding="10dp"
        android:maxLength="40"
        android:inputType="text"/>
    <EditText
        android:id="@+id/bio"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/bio_hint"
        android:drawableLeft="@drawable/ic_message_black_22dp"
        android:drawableStart="@drawable/ic_message_black_22dp"
        android:drawablePadding="10dp"
        android:inputType="textLongMessage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/next_button"
        android:id="@+id/nextButton"
        android:onClick="detailView"/>
</RelativeLayout>