<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@drawable/background2">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@drawable/boy"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/demo_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:text="@string/demo_username"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/demo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/demo_username"
        android:text="@string/demo_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/demo_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/demo_email"
        android:text="@string/demo_bio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="24sp"/>

</RelativeLayout>